examples/test_package/Double_dc_no_hash_full_tool/steps/benchrps___precise_run2/#test_analysis_1_result.txt
### Rock-Paper-Scissors Game Logic Evaluation Report

---

#### **1. Document Title**  
Evaluation of Rock-Paper-Scissors Game Logic in ProbLog

---

#### **2. Background and Purpose**  
The provided code implements the rules of the rock-paper-scissors game in ProbLog, including move definitions, win/lose relationships, and a scoring system. The purpose of this evaluation is to verify the correctness of the logic, identify any failures, and ensure compliance with classical and probabilistic reasoning requirements.

---

#### **3. Test Results Summary**  
The test query `determine_winner([rock,rock,rock],[paper,paper,scissor],W)` resulted in an error:  
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 41:77.
```

**Failed Query:**  
- `determine_winner([rock,rock,rock],[paper,paper,scissor],W)`  
  - **Expected Result:** The winner should be determined based on the scores of the rounds.  
  - **Actual Result:** Error due to an undefined clause.

---

#### **4. Failure Localization**  
- **Error Location:**  
  - The error occurs in the `determine_winner/3` predicate at line 41.  
  - The issue is caused by a missing or incorrectly defined clause for `determine_winner/3`.  

- **Code Block with Error:**  
  ```prolog
  determine_winner(P1Moves,P2Moves,Winner) :-
      play(P1Moves, P2Moves, Results),
      compute_score(Results, Score),
      (Score > 0 -> Winner = 'Player 1'; Score < 0 -> Winner = 'Player 2'; Winner = 'Draw').
  ```

---

#### **5. Root Cause Analysis**  
- **Classical ProbLog Scenario:**  
  - The error suggests that the predicate `determine_winner/3` is not correctly defined or called. The issue likely stems from a syntax error or missing definition.  
  - The recursive termination in `play/3` and `compute_score/2` is correctly implemented.  

- **Probabilistic ProbLog Scenario:**  
  - No probabilistic facts or rules are used in this code, so probabilistic reasoning compliance is not applicable here.  

- **DeepProbLog Integration:**  
  - The code does not use any DeepProbLog features (e.g., `nn/3`, `tensor/…`).  

---

#### **6. Overall Analysis**  
- **Functional Requirements:**  
  - **Classical Reasoning:** Partially met. The core logic for moves and win/lose relationships is correct, but the `determine_winner/3` predicate fails.  
  - **Probabilistic Reasoning:** Not applicable.  
  - **Neural Network Integration:** Not used.  

- **Edge Cases:**  
  - Non-list inputs or undefined moves are not handled.  
  - Deep recursion is not an issue due to the small input size.  

---

#### **7. Error Summary**  

| Number | Problem                          | Impact                          | Suggestion                          |
|--------|----------------------------------|---------------------------------|-------------------------------------|
| 1      | Undefined `determine_winner/3`   | Prevents winner determination   | Correct the predicate definition.   |
| 2      | No edge case handling            | May crash on invalid inputs    | Add input validation.               |

---

**Word Count:** ~400 words.  

**Final Note:** The core logic of the game is sound, but the `determine_winner/3` predicate requires correction to resolve the error. Edge cases should also be addressed for robustness.